# bili-history

./: .gitignore  Dockerfile  NOTICE  README.md  build.py  docker-compose.cuda.yml  docker-compose.yml  go.mod  go.sum  main.py  mcp_server.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test-proxy.js
.github/workflows/: docker-publish.yml  docker.yml  multi-platform-build.yml
backend/: .dockerignore  .gitignore  README.md  app.spec  build.py  main.py  pyproject.toml
backend-go/: .dockerignore  go.mod  go.sum
backend-go/biliapi/: client.go
backend-go/cmd/: main.go
backend-go/config/: config.go  config.yaml
backend/config/: scheduler_config.yaml
backend/docker/: Dockerfile.cpu
backend/routers/: apprise_config.py  data_sync.py  export.py  favorite.py  heatmap.py  history_simple.py  image_downloader.py  import_data_sqlite.py  like.py  popular_analytics.py  title_analytics.py  watchlater.py
backend/scripts/: apprise_notify.py  bilibili_history.py  incremental_import.py  popular_videos.py  send_log_email.py  sync_state.py  test_watchlater_del.py
backend/skills/bilibili-history-mcp/: SKILL.md
config/: config.yaml
docker/: Dockerfile.cpu
frontend/: .gitignore  Dockerfile  README.md  app.vue  index.html  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
routers/: download.py  email_config.py  fetch_bili_history.py  interaction_records.py  title_analytics.py  video_details.py  viewing_analytics.py
scripts/: scheduler_manager.py  utils.py
src-tauri/: Cargo.toml  tauri.conf.json
tests/: test_send_log_email.py
(+254 files in other folders)
