[project]
name = "bilibilihistoryfetcher"
version = "1.7.2"
description = "Bilibili History Fetcher"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "aiohttp~=3.11.18",
  "email-validator>=2.2.0",
  "fastapi~=0.115.12",
  "httpx~=0.28.1",
  "jieba~=0.42.1",
  "jinja2~=3.1.6",
  "loguru>=0.7.3",
  "mcp[cli]>=1.8.1",
  "numpy~=2.2.6",
  "openpyxl~=3.1.5",
  "pandas~=2.2.3",
  "apprise>=1.9.3",
  "psutil>=7.0.0",
  "pydantic>=2.11,<3",
  "pyecharts~=2.0.8",
  "pymysql~=1.1.1",
  "python-dateutil>=2.9.0",
  "pyyaml~=6.0.2",
  "qrcode~=8.2",
  "requests~=2.32.3",
  "schedule~=1.2.2",
  "scikit-learn~=1.6.1",
  "snownlp~=0.12.3",
  "tqdm>=4.67.1",
  "urllib3~=2.4.0",
  "uvicorn~=0.34.2",
  "yutto~=2.0.0",
]
